examples/typechecking/effects.an
effect Log with
    log: fn String -> Unit

effect Use a with
    get: fn Unit -> a
    set: fn a -> Unit

// Expect `can Use Unit` and not `can Log`
handle_basic () = 
    handle log "test1"
    | log v -> set v

use_resume () =
    handle ()
    // Test these two 'resume's refer to two different variables
    // with incompatible types
    | get () -> resume 3i32
    | set _ -> resume ()

does_use x =
    y = get ()
    set (y + x)

// args: -e ast-t --no-color
// expected exit status: 1
// expected stdout:
// effect Log with
//     (log: (error)): fn String -> Unit
// 
// effect Use a with
//     (get: (error)): fn Unit -> a
//     (set: (error)): fn a -> Unit
// 
// (handle_basic: fn Unit -> _ can _) () =
//     handle (log: (error)) "test1"
//     | (log: (error)) (v: (error)) -> (set: (error)) (v: (error))
// 
// (use_resume: fn Unit -> _ can _) () =
//     handle ()
//     | (get: (error)) () -> (resume: (error)) 3_I32
//     | (set: (error)) (_: (error)) -> (resume: (error)) ()
// 
// (does_use: fn _ -> _ can _) (x: _) =
//     (y: _) = (get: (error)) ()
//     (set: (error)) ((fn (p5: _) (p6: _) -> (+: fn _ _ {Add _} -> _ pure) (p5: _) (p6: _) {(error)}) (y: _) (x: _))

// expected stderr:
// examples/typechecking/effects.an:10:5
//  9 | handle_basic () = 
// 10 |     handle log "test1"	// error: Effects and handle expressions are currently unimplemented
//    |     ^^^^^^^^^^^^^^^^^^
// 11 |     | log v -> set v
// 
// examples/typechecking/effects.an:14:5
// 13 | use_resume () =
// 14 |     handle ()	// error: Effects and handle expressions are currently unimplemented
//    |     ^^^^^^^^^
// 15 |     // Test these two 'resume's refer to two different variables
// 
// examples/typechecking/effects.an:21:9
// 20 | does_use x =
// 21 |     y = get ()	// error: `get` not found in scope
//    |         ^^^
// 22 |     set (y + x)
// 
// examples/typechecking/effects.an:22:5
// 21 |     y = get ()
// 22 |     set (y + x)	// error: `set` not found in scope
//    |     ^^^
// 
// examples/typechecking/effects.an:22:12
// 21 |     y = get ()
//    |     // error: Multiple matching implicits found for type Add _ required by parameter 3: add_i8, add_i16, add_i32, add_i64, add_isz, ..
// 22 |     set (y + x)
//    |            ^
// 
// Found 5 errors and 0 warnings

